# unitree-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  install-mcp.ps1  justfile  llms-full.txt  llms.txt  pyproject.toml  start.bat  start.ps1
.github/workflows/: ci.yml
docs/: SETUP.md  SIM_SETUP.md  TOOLS.md
mcpb/: .mcpbignore  README.md  manifest.json  pack.ps1  pyproject.toml  requirements.txt
mcpb/assets/prompts/: examples.json  system.md  user.md
mcpb/src/unitree_mcp/: server.py
src/unitree_mcp/: server.py
tests/: conftest.py  test_server.py
web_sota/: index.html  package-lock.json  package.json  playwright.config.ts  start.ps1  vite.config.ts
web_sota/backend/: log_buffer.py  server.py
web_sota/backend/routes/: ai.py  llm.py  logging.py  models.py  settings.py  sim.py
web_sota/e2e/: basic.spec.ts
web_sota/src/: App.tsx  index.css
web_sota/src/pages/: Help.tsx  LLM.tsx  Logging.tsx  Settings.tsx
