[project]
name = "unitree-mcp"
version = "0.2.0"
description = "Unitree robotics via MCP simulation via MCP"
requires-python = ">=3.11"
dependencies = ["fastmcp>=3.2", "mujoco>=3.2", "httpx>=0.28", "fastapi>=0.115", "uvicorn[standard]>=0.34"]

[project.scripts]
unitree-mcp = "unitree_mcp:main"

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "pytest-mock>=3", "httpx>=0.28"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unitree_mcp"]
